Version 2.1
BrokerParameters
AlgoTrader Reference Data Manager
BreakOut Example Strategy
More flexilility on market data file naming
Switch from LIFO to average cost

Version 2.0
Multi Account Handling
Bloomberg Market Data Interface
Level-Zero Cache
New Execution Algorithm “Disbtributional”
InteractiveBrokers Financial Advisors Handling over FIX
SABR Option Pricing Engine
Single-JVM Live-Trading Mode
Eclipse Colorer Integration
Support for Global Industry Classification Standard (GICS)
relate Component to Combination instead of Security
DocBook based documentation
add JavaDoc Comments
Client Expert Mode
3rd Party Library updates (Esper 4.9, Spring Framework 3.2.3, Spring Integration 2.2.4, Hibernate 3.6.10, etc.)

Version 1.12
Esper 4.8
use Spring Integration for Mail Reconciliation
Esper Threading
Hibernate Locking
Portfolio Value Restoring
OpenPositionCallback / ClosePositionCallback
Generic approach for Bars and Ticks
FIX:
    FIX 4.4
    DukasCopy Fix Interface
    Init orderId from log-file
    Weekly Fix logon/logoff
Client:
    Markers, Annotations, Description & Crosshair
    Monitoring & Rechability Checking & Notifications
Market Data Snapshots
Strategy Properties
Market Data Gap Checking
Position Realized P/L
Handle crossed spreads

Version 1.11
Reconciliation (IB / RBS / UI)
SimpleOrders vs AlgoOrders (e.g. SlicingOrder)
Fix Interface
OrderPreference
PorfolioValue logging and charting
MailMessageReceiver
AndroMDA 3.4
ForexFuture / FX Hedging by ForexFuture

Version 1.10
GenericEvents
update Charting Functionality (add Indicators & Bars)
JMX over SSL

Version 1.9
SyntheticSecurities (Combinations / SyntheticIndices)
AlgoTraderSSHClient
PropertyService / PropertyHolder / Property
improve Hibernate Sessions Handling / Caching
Metrics Logging
PortfolioService
General performance optimizations

Version 1.8
IncrementalLimitOrder
HistoricalDataService HistoricalBars
MBean Annotations
SecurityFamily TickSizePattern
Measurement & MeasurementService

Version 1.7