@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:p="http://www.springframework.org/schema/p"
+    xsi:schemaLocation="http://www.springframework.org/schema/beans
+    http://www.springframework.org/schema/beans/spring-beans-3.0.xsd">
+
+    <bean id="queue" class="java.util.concurrent.LinkedBlockingQueue"/>
+
+    <bean id="messageListener" class="ch.algotrader.testapps.realtick.RTMessageListener" autowire="constructor" />
+
+    <bean id="strategyQueue" class="org.apache.activemq.command.ActiveMQQueue">
+        <constructor-arg value="TESTING.QUEUE" />
+    </bean>
+
+    <bean class="org.springframework.jms.listener.DefaultMessageListenerContainer">
+        <property name="connectionFactory" ref="jmsActiveMQFactory" />
+        <property name="destination" ref="strategyQueue" />
+        <property name="messageListener" ref="messageListener" />
+    </bean>
+
+</beans>
